--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -5,6 +5,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: 1;
 
   p {
     color: #ffffff;
