--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,8 @@
 <header>
   <app-logo>
   </app-logo>
+  <div class="dark-mode-toggle">
+    <input [(ngModel)]="darkMode" type="checkbox" id="dark-mode">
+    <label for="dark-mode"></label>
+  </div>
 </header>
