--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -5,4 +5,43 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  input {
+    display: none;
+  }
+
+  label {
+    width: 50px;
+    background: var(--active-color-1);
+    height: 18px;
+    border-radius: 30px;
+    display: block;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    &::after {
+      transition: .2s linear;
+      content: '';
+      width: 25px;
+      height: 25px;
+      position: absolute;
+      border-radius: 100%;
+      background: var(--active-color-1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transform: translateX(0);
+      -webkit-box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.9);
+      -moz-box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.9);
+      box-shadow: 0px 0px 14px -5px rgba(0,0,0,0.9);
+    }
+  }
+  
+  input:checked + label::after {
+    transition: transform .3s;
+    transform: translateX(25px);
+    background: #ffffff;
+  }
 }
